src/test/resources/nox/errors/err_cast_wrong.nox
// @test:error "CastError"
type Point { int x; int y; }
main() {
    json j = { a: 4 };
    Point p = j as Point;
    return p.x;
}
